[modify][schedule cron]use lineMessagingClinet

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 line.bot.channelSecret = ${LINE_BOT_CHANNEL_SECRET}
 line.bot.channelToken = ${LINE_BOT_CHANNEL_TOKEN}
 line.bot.handler.path = /callback
+
+ark.myUserId = ${LINE_BOT_MY_USER_ID}
