--- a/build.gradle
+++ b/build.gradle
@@ -17,5 +17,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'com.linecorp.bot:line-bot-spring-boot:1.11.0'
+	implementation 'org.projectlombok:lombok:1.16.18'
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
