--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ line.bot.channelSecret = ${LINE_BOT_CHANNEL_SECRET}
 line.bot.channelToken = ${LINE_BOT_CHANNEL_TOKEN}
 line.bot.handler.path = /callback
 
-ark.myUserId = ${LINE_BOT_MY_USER_ID}
+ark.line.id = ${LINE_ID}
