--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 line.bot.channelSecret = ${LINE_BOT_CHANNEL_SECRET}
 line.bot.channelToken = ${LINE_BOT_CHANNEL_TOKEN}
 line.bot.handler.path = /callback
+
 ark.line.id = ${LINE_ID}
+ark.line.host = ${LINE_HOST}
