--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,5 +13,5 @@ pipelines:
         script: # Modify the commands below to build your repository.
           # You must commit the Gradle wrapper to your repository
           # https://docs.gradle.org/current/userguide/gradle_wrapper.html
-          - bash ./gradlew -x test build
-          - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git HEAD
+          - bash ./gradlew -x test clean build
+          - git push -f https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git HEAD
