--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'com.linecorp.bot:line-bot-spring-boot:2.7.0'
-	implementation 'org.projectlombok:lombok:1.16.18'
+	compileOnly 'org.projectlombok:lombok:1.18.10'
+	annotationProcessor 'org.projectlombok:lombok:1.18.10'
 	implementation 'org.flywaydb:flyway-core:5.2.4'
 	implementation 'org.postgresql:postgresql:42.2.8'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.0.1'
