--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,12 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.1.8.RELEASE'
 	implementation 'com.linecorp.bot:line-bot-spring-boot:2.7.0'
 	compileOnly 'org.projectlombok:lombok:1.18.10'
 	annotationProcessor 'org.projectlombok:lombok:1.18.10'
 	implementation 'org.flywaydb:flyway-core:5.2.4'
-	implementation 'org.postgresql:postgresql:42.2.8'
+	runtime 'org.postgresql:postgresql:42.2.8'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.0.1'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
