[fix][clean][-]TestControllerをlocal(デバッグ)用にしました

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,3 +1,5 @@
+spring.profiles = production
+
 spring.datasource.url = ${DATABASE_JDBC_URL}
 spring.datasource.username = ${DATABASE_USER}
 spring.datasource.password = ${DATABASE_PASSWORD}
