--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,5 @@
+spring.profiles = local
+
 spring.datasource.url = jdbc:postgresql://localhost:5432/testdb
 spring.datasource.username = postgres
 spring.datasource.password = postgres1234
