--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	implementation 'org.flywaydb:flyway-core:5.2.4'
 	runtime 'org.postgresql:postgresql:42.2.8'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.0.1'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.1.8.RELEASE'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
