--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,3 +14,10 @@ services:
       - DATABASE_HOST=localhost
     volumes:
       - ./db/init:/docker-entrypoint-initdb.d
+
+  redis:
+    image: "redis:5.0.6"
+    ports:
+      - "6379:6379"
+    volumes:
+      - "./redis:/data"
