--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -5,6 +5,9 @@ spring.datasource.username = postgres
 spring.datasource.password = postgres1234
 spring.datasource.driver-class-name = org.postgresql.Driver
 
+spring.redis.host=localhost
+spring.redis.port=6379
+
 flyway.url = jdbc:postgresql://localhost:5432/testdb
 flyway.user = postgres
 flyway.password = postgres1234
