heroku用のredis設定を追加しました

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -5,6 +5,11 @@ spring.datasource.username = ${DATABASE_USER}
 spring.datasource.password = ${DATABASE_PASSWORD}
 spring.datasource.driver-class-name = ${DATABASE_DRIVER_CLASS_NAME}
 
+spring.redis.host=${REDIS_HOST}
+spring.redis.port=${REDIS_PORT}
+spring.redis.user=${REDIS_USER}
+spring.redis.password=${REDIS_PASSWORD}
+
 flyway.url = ${DATABASE_JDBC_URL}
 flyway.user = ${DATABASE_USER}
 flyway.password = ${DATABASE_PASSWORD}
