LINE botは30秒以内にレスポンスしないといけないので、herokuで常時稼働するように自身へのHTTPリクエストを行う処理を追加しました

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -12,3 +12,6 @@ flyway.url = jdbc:postgresql://localhost:5432/testdb
 flyway.user = postgres
 flyway.password = postgres1234
 flyway.driver = org.postgresql.Driver
+
+app.own-host=http://localhost
+app.own-port=8080
