--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -14,3 +14,6 @@ flyway.url = ${DATABASE_JDBC_URL}
 flyway.user = ${DATABASE_USER}
 flyway.password = ${DATABASE_PASSWORD}
 flyway.driver = ${DATABASE_DRIVER_CLASS_NAME}
+
+app.own-host=${OWN_HOST}
+app.own-port=${OWN_PORT}
